--- a/css/styles.css
+++ b/css/styles.css
@@ -2356,37 +2356,31 @@ textarea.form-control {
   border-color: #dc3545;
   box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
 }
-
-.form-inline {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-}
 .form-inline .form-check {
   width: 100%;
 }
 @media (min-width: 576px) {
-  .form-inline label {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 0;
-  }
-  .form-inline .form-group {
-    display: flex;
-    flex: 0 0 auto;
-    flex-flow: row wrap;
-    align-items: center;
-    margin-bottom: 0;
-  }
-  .form-inline .form-control {
-    display: inline-block;
-    width: auto;
-    vertical-align: middle;
-  }
-  .form-inline .form-control-plaintext {
-    display: inline-block;
-  }
+  /*.form-inline label {*/
+  /*  display: flex;*/
+  /*  align-items: center;*/
+  /*  justify-content: center;*/
+  /*  margin-bottom: 0;*/
+  /*}*/
+  /*.form-inline .form-group {*/
+  /*  display: flex;*/
+  /*  flex: 0 0 auto;*/
+  /*  flex-flow: row wrap;*/
+  /*  align-items: center;*/
+  /*  margin-bottom: 0;*/
+  /*}*/
+  /*.form-inline .form-control {*/
+  /*  display: inline-block;*/
+  /*  width: auto;*/
+  /*  vertical-align: middle;*/
+  /*}*/
+  /*.form-inline .form-control-plaintext {*/
+  /*  display: inline-block;*/
+  /*}*/
   .form-inline .input-group,
 .form-inline .custom-select {
     width: auto;
@@ -10207,7 +10201,7 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000000 100%), url("../assets/img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000000 100%), url("../assets/img/Mountain.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -10286,7 +10280,7 @@ body {
 
 .signup-section {
   padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000000 100%), url("../assets/img/bg-signup.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000000 100%), url("../assets/img/Forest.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -10343,9 +10337,7 @@ body {
 .footer {
   padding: 5rem 0;
 }
-#about-container {
-  height: 50vh;
-}
-#about-name {
-  margin-top: 10%;
+
+#textarea {
+  height: 80px;
 }
