--- a/css/styles.css
+++ b/css/styles.css
@@ -2347,6 +2347,7 @@ textarea.form-control {
 }
 .form-inline .form-check {
   width: 100%;
+  height: 500px;
 }
 @media (min-width: 576px) {
   /*.form-inline label {*/
@@ -10286,7 +10287,6 @@ body {
   height: auto;
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 80%;
-  text-transform: uppercase;
   letter-spacing: 0.15rem;
   border: 0;
 }
@@ -10345,6 +10345,13 @@ body {
     font-size: 24px;
 }
 
+#formContact {
+  height: 500px;
+}
+
 #textarea {
-  height: 80px;
+  font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif,
+                "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  padding: 1.25rem 2rem;
+  height: 210px;
 }
