--- a/css/styles.css
+++ b/css/styles.css
@@ -10352,8 +10352,10 @@ body {
 #textarea {
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif,
                 "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  padding: 1.25rem 2rem;
+  padding: 1.25rem 1.7rem;
+  letter-spacing: 0.15rem;
   height: 210px;
+  font-size: 80%;
 }
 
 .ind-slider {
